--- a/package.json
+++ b/package.json
@@ -11,6 +11,9 @@
   "license": "ISC",
   "dependencies": {
     "body-parser": "^1.20.2",
-    "express": "^4.18.2"
+    "dompurify": "^3.0.8",
+    "express": "^4.18.2",
+    "helmet": "^7.1.0",
+    "validator": "^13.11.0"
   }
 }
