--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "dompurify": "^3.0.8",
     "express": "^4.18.2",
     "helmet": "^7.1.0",
+    "jsdom": "^24.0.0",
     "validator": "^13.11.0"
   }
 }
