--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
   "dependencies": {
     "body-parser": "^1.20.2",
     "dompurify": "^3.0.8",
+    "dotenv": "^16.4.5",
     "express": "^4.18.2",
+    "express-rate-limit": "^7.1.5",
     "helmet": "^7.1.0",
     "jsdom": "^24.0.0",
     "validator": "^13.11.0"
