--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "express-rate-limit": "^7.1.5",
     "helmet": "^7.1.0",
     "jsdom": "^24.0.0",
+    "redis": "^4.6.13",
     "validator": "^13.11.0"
   }
 }
