--- a/package.json
+++ b/package.json
@@ -11,13 +11,18 @@
   "license": "ISC",
   "dependencies": {
     "body-parser": "^1.20.2",
+    "cssnano": "^6.0.4",
     "dompurify": "^3.0.8",
     "dotenv": "^16.4.5",
+    "eslint": "^8.56.0",
     "express": "^4.18.2",
     "express-rate-limit": "^7.1.5",
     "helmet": "^7.1.0",
+    "html-minifier": "^4.0.0",
     "jsdom": "^24.0.0",
+    "postcss": "^8.4.35",
     "redis": "^4.6.13",
+    "terser": "^5.27.2",
     "validator": "^13.11.0"
   }
 }
