--- a/package.json
+++ b/package.json
@@ -4,13 +4,15 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "prod": "node index.mjs"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@redis/json": "^1.0.6",
     "body-parser": "^1.20.2",
+    "cookie-parser": "^1.4.6",
     "cssnano": "^6.0.4",
     "dompurify": "^3.0.8",
     "dotenv": "^16.4.5",
@@ -20,6 +22,8 @@
     "helmet": "^7.1.0",
     "html-minifier": "^4.0.0",
     "jsdom": "^24.0.0",
+    "no-profanity": "^1.5.1",
+    "node-redis": "^0.1.7",
     "postcss": "^8.4.35",
     "redis": "^4.6.13",
     "terser": "^5.27.2",
