--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "cssnano": "^6.0.4",
     "dompurify": "^3.0.8",
     "dotenv": "^16.4.5",
+    "ejs": "^3.1.9",
     "eslint": "^8.56.0",
     "express": "^4.18.2",
     "express-rate-limit": "^7.1.5",
@@ -24,7 +25,9 @@
     "jsdom": "^24.0.0",
     "no-profanity": "^1.5.1",
     "node-redis": "^0.1.7",
+    "path": "^0.12.7",
     "postcss": "^8.4.35",
+    "puppeteer": "^22.2.0",
     "redis": "^4.6.13",
     "terser": "^5.27.2",
     "validator": "^13.11.0"
