--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@huggingface/inference": "^2.6.4",
     "@redis/json": "^1.0.6",
     "body-parser": "^1.20.2",
     "cookie-parser": "^1.4.6",
