--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "dompurify": "^3.0.8",
     "dotenv": "^16.4.5",
     "ejs": "^3.1.9",
+    "emoji-short-name": "^2.0.0",
     "eslint": "^8.56.0",
     "express": "^4.18.2",
     "express-rate-limit": "^7.1.5",
