--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "eslint": "^8.56.0",
     "express": "^4.18.2",
     "express-rate-limit": "^7.1.5",
+    "firebase": "^10.8.1",
     "helmet": "^7.1.0",
     "html-minifier": "^4.0.0",
     "jsdom": "^24.0.0",
