--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@huggingface/inference": "^2.6.4",
     "@redis/json": "^1.0.6",
+    "axios": "^1.6.7",
     "body-parser": "^1.20.2",
     "cookie-parser": "^1.4.6",
     "cssnano": "^6.0.4",
